# DataEng_Project

./: .pre-commit-config.yaml  Pipfile  README.md  data_pub.py  data_sub.py  datagathering.py  db.py  pyproject.toml  requirements.txt  setup.cfg  setup.sh  valid.py  vehicle_groups_and_ids_sp25.csv
assignment3/: data_pub.py  data_sub.py  valid.py  valid_stopevents.py
part2/: data_pub.py
scripts/: README.md  check_workspace.sh  run_job.sh  update_vm.sh  vm-setup-pipenv.sh  vm-setup-uv.sh
scripts/setup/: setup_vm.sh
setup/: setup_local.sh  setup_vm.sh
